dataset1235/2025-2/610742602/users/1362015512/executions/677928262_3455942218.log
== RUN (2025-08-28 17:10:08)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:10:56)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

total_unitario = num1 * jogos
total_frete = total_unitario + frete

saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55 1
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1 1
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307 1
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059 1
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15 1
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:09:02)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:11:59)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

total_unitario = num1 * jogos
total_frete = total_unitario + frete

saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:10:10)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:09:43)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:09:39)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:12:11)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

total_unitario = num1 * jogos
total_frete = total_unitario + frete

saldo =  num2 - total_frete

# Saída
print(round(total_frete, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:10:32)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

total_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55 1
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1 1
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307 1
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059 1
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15 1
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:08:48)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Impressao do valor total e do saldo:
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:09:25)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:09:38)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:09:42)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:09:01)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:09:36)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:09:41)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:10:57)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

total_unitario = num1 * jogos
total_frete = total_unitario + frete

saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55 1
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1 1
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307 1
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059 1
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15 1
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:12:02)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

total_unitario = num1 * jogos
total_frete = total_unitario + frete

saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 16
    print(round(total_frete), 1))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:10:09)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total_frete = total_unitario + frete
                  ^^^^^^^^^^^^^^
NameError: name 'total_unitario' is not defined. Did you mean: 'totaç_unitario'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:09:24)
-- CODE: 

# Leitura das entradas e conversao para float:
num1 = float(input("Qual o valor unitario do jogo? "))
num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
jogos = 8

totaç_unitario = num1 * jogos
total_frete = total_unitario + frete
saldo =  num2 - total_frete

# Saída
print(round(total_frete), 1)
print(round(saldo), 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num2 = flot(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
           ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
